added partner section

--- a/Views/Home/WebDesign.cshtml
+++ b/Views/Home/WebDesign.cshtml
@@ -5,16 +5,207 @@
 
 <div class="main-container">
     <div class="container">
-        <div class="section-title">
-            <h1 class="font-weight-bold">Web Design and Development Services</h1>
-            <h3>Transforming Your Ideas into Beautiful and Functional Websites</h3>
+        @* Website and Development Banner *@
+        <div class="ml-main-banner">
+            <div class="container-fluid">
+                <div class="section-title" style="margin-top: 100px">
+                    <h1 class="font-weight-bold">Web Design and Development Services</h1>
+                    <h3>Transforming Your Ideas into Beautiful and Functional Websites</h3>
+                    <a class="btn btn-secondary mt-5" href="/contact/">Get Started</a>
+                </div>
+            </div>
         </div>
-        <div class="bar"></div>
+        <div class="ml-partner-area mt-minus-top ptb-80 pb-0">
+            <div class="container">
+                <div class="owl-carousel partner-slides owl-carousel owl-theme owl-loaded owl-drag">
+                    <div class="owl-stage-outer">
+                        <div class="owl-stage" style="transform: translate3d(-1838px, 0px, 0px); transition: all 1s ease 0s; width: 3883px;">
+                            @* Partner Cloned 2 *@
+                            <div class="owl-item cloned" style="width: 204.333px;">
+                                <div class="single-ml-partner">
+                                    <a href="#" target="_blank">
+                                        <img src="~/Assets/img/partner-img/partner-2.png" alt="image">
+                                        <img src="~/Assets/img/partner-img/partner-hover2.png" alt="image">
+                                    </a>
+                                </div>
+                            </div>
+                            @* Partner Cloned 3 *@
+                            <div class="owl-item cloned" style="width: 204.333px;">
+                                <div class="single-ml-partner">
+                                    <a href="#" target="_blank">
+                                        <img src="~/Assets/img/partner-img/partner-3.png" alt="image">
+                                        <img src="~/Assets/img/partner-img/partner-hover3.png" alt="image">
+                                    </a>
+                                </div>
+                            </div>
+                            @* Partner Cloned 10 *@
+                            <div class="owl-item cloned" style="width: 204.333px;">
+                                <div class="single-ml-partner">
+                                    <a href="#" target="_blank">
+                                        <img src="~/Assets/img/partner-img/partner-10.png" alt="image">
+                                        <img src="~/Assets/img/partner-img/partner-hover10.png" alt="image">
+                                    </a>
+                                </div>
+                            </div>
+                            @* Partner Cloned 5 *@
+                            <div class="owl-item cloned" style="width: 204.333px;">
+                                <div class="single-ml-partner">
+                                    <a href="#" target="_blank">
+                                        <img src="~/Assets/img/partner-img/partner-5.png" alt="image">
+                                        <img src="~/Assets/img/partner-img/partner-hover5.png" alt="image">
+                                    </a>
+                                </div>
+                            </div>
+                            @* Partner Cloned 6 *@
+                            <div class="owl-item cloned" style="width: 204.333px;">
+                                <div class="single-ml-partner">
+                                    <a href="#" target="_blank">
+                                        <img src="~/Assets/img/partner-img/partner-6.png" alt="image">
+                                        <img src="~/Assets/img/partner-img/partner-hover6.png" alt="image">
+                                    </a>
+                                </div>
+                            </div>
+                            @* Partner Cloned 7 *@
+                            <div class="owl-item cloned" style="width: 204.333px;">
+                                <div class="single-ml-partner">
+                                    <a href="#" target="_blank">
+                                        <img src="~/Assets/img/partner-img/partner-7.png" alt="image">
+                                        <img src="~/Assets/img/partner-img/partner-hover7.png" alt="image">
+                                    </a>
+                                </div>
+                            </div>
+                            @* Partner 1 *@
+                            <div class="owl-item" style="width: 204.333px;">
+                                <div class="single-ml-partner">
+                                    <a href="#" target="_blank">
+                                        <img src="~/Assets/img/partner-img/partner-1.png" alt="image">
+                                        <img src="~/Assets/img/partner-img/partner-hover1.png" alt="image">
+                                    </a>
+                                </div>
+                            </div>
+                            @* Partner 2 *@
+                            <div class="owl-item" style="width: 204.333px;">
+                                <div class="single-ml-partner">
+                                    <a href="#" target="_blank">
+                                        <img src="~/Assets/img/partner-img/partner-2.png" alt="image">
+                                        <img src="~/Assets/img/partner-img/partner-hover2.png" alt="image">
+                                    </a>
+                                </div>
+                            </div>
+                            @* Partner 3 *@
+                            <div class="owl-item" style="width: 204.333px;">
+                                <div class="single-ml-partner">
+                                    <a href="#" target="_blank">
+                                        <img src="~/Assets/img/partner-img/partner-3.png" alt="image">
+                                        <img src="~/Assets/img/partner-img/partner-hover3.png" alt="image">
+                                    </a>
+                                </div>
+                            </div>
+                            @* Partner Active 10 *@
+                            <div class="owl-item active" style="width: 204.333px;">
+                                <div class="single-ml-partner">
+                                    <a href="#" target="_blank">
+                                        <img src="~/Assets/img/partner-img/partner-10.png" alt="image">
+                                        <img src="~/Assets/img/partner-img/partner-hover10.png" alt="image">
+                                    </a>
+                                </div>
+                            </div>
+                            @* Partner Active 5 *@
+                            <div class="owl-item active" style="width: 204.333px;">
+                                <div class="single-ml-partner">
+                                    <a href="#" target="_blank">
+                                        <img src="~/Assets/img/partner-img/partner-5.png" alt="image">
+                                        <img src="~/Assets/img/partner-img/partner-hover5.png" alt="image">
+                                    </a>
+                                </div>
+                            </div>
+                            @* Partner Active 6 *@
+                            <div class="owl-item active" style="width: 204.333px;">
+                                <div class="single-ml-partner">
+                                    <a href="#" target="_blank">
+                                        <img src="~/Assets/img/partner-img/partner-6.png" alt="image">
+                                        <img src="~/Assets/img/partner-img/partner-hover6.png" alt="image">
+                                    </a>
+                                </div>
+                            </div>
+                            @* Partner Active 7 *@
+                            <div class="owl-item active" style="width: 204.333px;">
+                                <div class="single-ml-partner">
+                                    <a href="#" target="_blank">
+                                        <img src="~/Assets/img/partner-img/partner-7.png" alt="image">
+                                        <img src="~/Assets/img/partner-img/partner-hover7.png" alt="image">
+                                    </a>
+                                </div>
+                            </div>
+                            @* Partner Active Cloned 1 *@
+                            <div class="owl-item cloned active" style="width: 204.333px;">
+                                <div class="single-ml-partner">
+                                    <a href="#" target="_blank">
+                                        <img src="~/Assets/img/partner-img/partner-1.png" alt="image">
+                                        <img src="~/Assets/img/partner-img/partner-hover1.png" alt="image">
+                                    </a>
+                                </div>
+                            </div>
+                            @* Partner Active Cloned 2 *@
+                            <div class="owl-item cloned active" style="width: 204.333px;">
+                                <div class="single-ml-partner">
+                                    <a href="#" target="_blank">
+                                        <img src="~/Assets/img/partner-img/partner-2.png" alt="image">
+                                        <img src="~/Assets/img/partner-img/partner-hover2.png" alt="image">
+                                    </a>
+                                </div>
+                            </div>
+                            @* Partner Cloned 3 *@
+                            <div class="owl-item cloned" style="width: 204.333px;">
+                                <div class="single-ml-partner">
+                                    <a href="#" target="_blank">
+                                        <img src="~/Assets/img/partner-img/partner-3.png" alt="image">
+                                        <img src="~/Assets/img/partner-img/partner-hover3.png" alt="image">
+                                    </a>
+                                </div>
+                            </div>
+                            @* Partner Cloned 10 *@
+                            <div class="owl-item cloned" style="width: 204.333px;">
+                                <div class="single-ml-partner">
+                                    <a href="#" target="_blank">
+                                        <img src="~/Assets/img/partner-img/partner-10.png" alt="image">
+                                        <img src="~/Assets/img/partner-img/partner-hover10.png" alt="image">
+                                    </a>
+                                </div>
+                            </div>
+                            @* Partner Cloned 5 *@
+                            <div class="owl-item cloned" style="width: 204.333px;">
+                                <div class="single-ml-partner">
+                                    <a href="#" target="_blank">
+                                        <img src="~/Assets/img/partner-img/partner-5.png" alt="image">
+                                        <img src="~/Assets/img/partner-img/partner-hover5.png" alt="image">
+                                    </a>
+                                </div>
+                            </div>
+                            @* Partner Cloned 6 *@
+                            <div class="owl-item cloned" style="width: 204.333px;">
+                                <div class="single-ml-partner">
+                                    <a href="#" target="_blank">
+                                        <img src="~/Assets/img/partner-img/partner-6.png" alt="image">
+                                        <img src="~/Assets/img/partner-img/partner-hover6.png" alt="image">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="owl-nav disabled"><div class="owl-prev">prev</div><div class="owl-next">next</div></div><div class="owl-dots disabled"></div>
+                </div>
+            </div>
+        </div>
+
+        @* Key Features *@
         <div class="solutions-area pb-80">
             <div class="container justify-content-center">
                 <div class="section-title">
-                    <h4>Key Features</h4>
+                    <span class="sub-title">What We Offer</span>
+                    <h2>Our Featured Solutions</h2>
                     <div class="bar"></div>
+                    <p>At Future Craft Digital, we specialize in creating stunning and user-friendly websites tailored to meet your unique business requirements.</p>
                 </div>
                 <div class="row">
                     @* Responsive and Mobile-Friendly Design *@
