added fun facts section in web design and development page

--- a/Views/Home/WebDesign.cshtml
+++ b/Views/Home/WebDesign.cshtml
@@ -277,6 +277,45 @@
                 </div>
             </div>
         </div>
+
+        @* Fun Facts Section *@
+        <div class="funfacts-area ptb-80">
+            <div class="container">
+                <div class="section-title">
+                    <h2>We always try to understand users expectation</h2>
+                    <div class="bar"></div>
+                    <p>By prioritizing user expectations, Future Craft Digital can create products, services, or experiences that align with user needs, resulting in enhanced satisfaction, engagement, and usability.</p>
+                </div>
+                <div class="row">
+                    <div class="col-lg-4 col-md-4 col-12">
+                        <div class="funfact">
+                            <h3>20K</h3>
+                            <p>Feedback</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-4 col-12">
+                        <div class="funfact">
+                            <h3>500+</h3>
+                            <p>Workers</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-4 col-12">
+                        <div class="funfact">
+                            <h3>70+</h3>
+                            <p>Contributors</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="contact-cta-box">
+                    <h3>Have any question about us?</h3>
+                    <p>Don't hesitate to contact us</p>
+                    <a class="btn btn-primary" href="/contact/">Contact Us</a>
+                </div>
+                <div class="map-bg">
+                    <img src="~/Assets/img/map.png" alt="map">
+                </div>
+            </div>
+        </div>
     </div> 
 
 
