change technology stack logos in web design&dev page

--- a/Views/Home/WebDesign.cshtml
+++ b/Views/Home/WebDesign.cshtml
@@ -15,12 +15,14 @@
                 </div>
             </div>
         </div>
+
+        @* Technology Stack Logo Section *@
         <div class="ml-partner-area mt-minus-top ptb-80 pb-0">
             <div class="container">
                 <div class="owl-carousel partner-slides owl-carousel owl-theme owl-loaded owl-drag">
                     <div class="owl-stage-outer">
                         <div class="owl-stage" style="transform: translate3d(-1838px, 0px, 0px); transition: all 1s ease 0s; width: 3883px;">
-                            @* Partner Cloned 2 *@
+                            @* Partner Cloned 2 (React JS) *@
                             <div class="owl-item cloned" style="width: 204.333px;">
                                 <div class="single-ml-partner">
                                     <a href="#" target="_blank">
@@ -29,7 +31,7 @@
                                     </a>
                                 </div>
                             </div>
-                            @* Partner Cloned 3 *@
+                            @* Partner Cloned 3 (Bootstrap Logo) *@
                             <div class="owl-item cloned" style="width: 204.333px;">
                                 <div class="single-ml-partner">
                                     <a href="#" target="_blank">
@@ -38,16 +40,7 @@
                                     </a>
                                 </div>
                             </div>
-                            @* Partner Cloned 10 *@
-                            <div class="owl-item cloned" style="width: 204.333px;">
-                                <div class="single-ml-partner">
-                                    <a href="#" target="_blank">
-                                        <img src="~/Assets/img/partner-img/partner-10.png" alt="image">
-                                        <img src="~/Assets/img/partner-img/partner-hover10.png" alt="image">
-                                    </a>
-                                </div>
-                            </div>
-                            @* Partner Cloned 5 *@
+                            @* Partner Cloned 5 (PHP Logo) *@
                             <div class="owl-item cloned" style="width: 204.333px;">
                                 <div class="single-ml-partner">
                                     <a href="#" target="_blank">
@@ -56,7 +49,7 @@
                                     </a>
                                 </div>
                             </div>
-                            @* Partner Cloned 6 *@
+                            @* Partner Cloned 6 (HTML5 Logo) *@
                             <div class="owl-item cloned" style="width: 204.333px;">
                                 <div class="single-ml-partner">
                                     <a href="#" target="_blank">
@@ -65,7 +58,7 @@
                                     </a>
                                 </div>
                             </div>
-                            @* Partner Cloned 7 *@
+                            @* Partner Cloned 7 (Css3 Logo) *@
                             <div class="owl-item cloned" style="width: 204.333px;">
                                 <div class="single-ml-partner">
                                     <a href="#" target="_blank">
@@ -74,7 +67,7 @@
                                     </a>
                                 </div>
                             </div>
-                            @* Partner 1 *@
+                            @* Partner 1 (Javascript Logo)*@
                             <div class="owl-item" style="width: 204.333px;">
                                 <div class="single-ml-partner">
                                     <a href="#" target="_blank">
@@ -83,7 +76,7 @@
                                     </a>
                                 </div>
                             </div>
-                            @* Partner 2 *@
+                            @* Partner 2 (React JS) *@
                             <div class="owl-item" style="width: 204.333px;">
                                 <div class="single-ml-partner">
                                     <a href="#" target="_blank">
@@ -92,7 +85,7 @@
                                     </a>
                                 </div>
                             </div>
-                            @* Partner 3 *@
+                            @* Partner 3 (Bootstrap Logo)*@
                             <div class="owl-item" style="width: 204.333px;">
                                 <div class="single-ml-partner">
                                     <a href="#" target="_blank">
@@ -101,16 +94,7 @@
                                     </a>
                                 </div>
                             </div>
-                            @* Partner Active 10 *@
-                            <div class="owl-item active" style="width: 204.333px;">
-                                <div class="single-ml-partner">
-                                    <a href="#" target="_blank">
-                                        <img src="~/Assets/img/partner-img/partner-10.png" alt="image">
-                                        <img src="~/Assets/img/partner-img/partner-hover10.png" alt="image">
-                                    </a>
-                                </div>
-                            </div>
-                            @* Partner Active 5 *@
+                            @* Partner Active 5 (PHP Logo)  *@
                             <div class="owl-item active" style="width: 204.333px;">
                                 <div class="single-ml-partner">
                                     <a href="#" target="_blank">
@@ -119,7 +103,7 @@
                                     </a>
                                 </div>
                             </div>
-                            @* Partner Active 6 *@
+                            @* Partner Active 6 (HTML5 Logo)*@
                             <div class="owl-item active" style="width: 204.333px;">
                                 <div class="single-ml-partner">
                                     <a href="#" target="_blank">
@@ -128,7 +112,7 @@
                                     </a>
                                 </div>
                             </div>
-                            @* Partner Active 7 *@
+                            @* Partner Active 7 (Css3 Logo)*@
                             <div class="owl-item active" style="width: 204.333px;">
                                 <div class="single-ml-partner">
                                     <a href="#" target="_blank">
@@ -137,7 +121,7 @@
                                     </a>
                                 </div>
                             </div>
-                            @* Partner Active Cloned 1 *@
+                            @* Partner Active Cloned 1 (Javascript Logo)*@
                             <div class="owl-item cloned active" style="width: 204.333px;">
                                 <div class="single-ml-partner">
                                     <a href="#" target="_blank">
@@ -146,7 +130,7 @@
                                     </a>
                                 </div>
                             </div>
-                            @* Partner Active Cloned 2 *@
+                            @* Partner Active Cloned 2 (React JS) *@
                             <div class="owl-item cloned active" style="width: 204.333px;">
                                 <div class="single-ml-partner">
                                     <a href="#" target="_blank">
@@ -155,7 +139,7 @@
                                     </a>
                                 </div>
                             </div>
-                            @* Partner Cloned 3 *@
+                            @* Partner Cloned 3 (Bootstrap Logo)*@
                             <div class="owl-item cloned" style="width: 204.333px;">
                                 <div class="single-ml-partner">
                                     <a href="#" target="_blank">
@@ -164,16 +148,7 @@
                                     </a>
                                 </div>
                             </div>
-                            @* Partner Cloned 10 *@
-                            <div class="owl-item cloned" style="width: 204.333px;">
-                                <div class="single-ml-partner">
-                                    <a href="#" target="_blank">
-                                        <img src="~/Assets/img/partner-img/partner-10.png" alt="image">
-                                        <img src="~/Assets/img/partner-img/partner-hover10.png" alt="image">
-                                    </a>
-                                </div>
-                            </div>
-                            @* Partner Cloned 5 *@
+                            @* Partner Cloned 5 (PHP Logo)  *@
                             <div class="owl-item cloned" style="width: 204.333px;">
                                 <div class="single-ml-partner">
                                     <a href="#" target="_blank">
@@ -182,7 +157,7 @@
                                     </a>
                                 </div>
                             </div>
-                            @* Partner Cloned 6 *@
+                            @* Partner Cloned 6 (HTML5 Logo) *@
                             <div class="owl-item cloned" style="width: 204.333px;">
                                 <div class="single-ml-partner">
                                     <a href="#" target="_blank">
