remove padding left and right in tech stack container

--- a/Views/Home/WebDesign.cshtml
+++ b/Views/Home/WebDesign.cshtml
@@ -18,7 +18,7 @@
 
         @* Technology Stack Logo Section *@
         <div class="ml-partner-area mt-minus-top ptb-80 pb-0">
-            <div class="container">
+            <div class="container px-0">
                 <div class="owl-carousel partner-slides owl-carousel owl-theme owl-loaded owl-drag">
                     <div class="owl-stage-outer">
                         <div class="owl-stage" style="transform: translate3d(-1838px, 0px, 0px); transition: all 1s ease 0s; width: 3883px;">
