--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -50,7 +50,7 @@
                                     </a>
                                     <ul class="dropdown-menu">
                                         <li class="nav-item">
-                                            <a class="nav-link" href="/about-2/">
+                                            <a class="nav-link" href="@Url.Action("Ecommerce", "Home")">
                                                 Ecommerce Website
                                             </a>
                                         </li>
@@ -60,7 +60,7 @@
                                             </a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="/about-2/">
+                                            <a class="nav-link" href="">
                                                 Point of Sale (POS)
                                             </a>
                                         </li>
