--- a/Views/Home/Ecommerce.cshtml
+++ b/Views/Home/Ecommerce.cshtml
@@ -15,74 +15,124 @@
     </div>
 
     @* Services Section *@
-<div class="ml-services-area ptb-80">
-    <div class="container">
-        <div class="row justify-content-center">
-            @* Mobile App Development *@
-            <div class="col-lg-6 col-sm-6">
-                <div class="single-ml-services-box">
-                    <div class="image">
-                        <img src="~/Assets/img/services-left-image/service-image6.png" alt="image">
+    <div class="ml-services-area ptb-80">
+        <div class="container">
+            <div class="row justify-content-center">
+                @* Mobile App Development *@
+                <div class="col-lg-6 col-sm-6">
+                    <div class="single-ml-services-box">
+                        <div class="image">
+                            <img src="~/Assets/img/services-left-image/service-image6.png" alt="image">
+                        </div>
+                        <h3><a href="/service-details/">Mobile App Development</a></h3>
+                        <p>Highlights the ability to create engaging and user-friendly mobile applications for iOS and Android platforms.</p>
                     </div>
-                    <h3><a href="/service-details/">Mobile App Development</a></h3>
-                    <p>Highlights the ability to create engaging and user-friendly mobile applications for iOS and Android platforms.</p>
+                </div>
+                @* E-commerce Solutions *@
+                <div class="col-lg-6 col-sm-6">
+                    <div class="single-ml-services-box">
+                        <div class="image">
+                            <img src="~/Assets/img/services-left-image/service-image1.png" alt="image">
+                        </div>
+                        <h3><a href="/service-details/">E-commerce Solutions</a></h3>
+                        <p>Emphasizes the expertise in building robust e-commerce platforms with features like secure payment gateways and inventory management.</p>
+                    </div>
+                </div>
+                @* Data Analytics *@
+                <div class="col-lg-6 col-sm-6">
+                    <div class="single-ml-services-box">
+                        <div class="image">
+                            <img src="~/Assets/img/services-left-image/service-image5.png" alt="image">
+                        </div>
+                        <h3><a href="/service-details/">Data Analytics</a></h3>
+                        <p>Focuses on helping businesses gain valuable insights from their data for informed decision-making.</p>
+                    </div>
+                </div>
+                @* Cybersecurity *@
+                <div class="col-lg-6 col-sm-6">
+                    <div class="single-ml-services-box">
+                        <div class="image">
+                            <img src="~/Assets/img/services-left-image/service-image4.png" alt="image">
+                        </div>
+                        <h3><a href="/service-details/">Cybersecurity</a></h3>
+                        <p>Highlights comprehensive cybersecurity solutions to protect businesses from potential threats and safeguard their data.</p>
+                    </div>
                 </div>
             </div>
-            @* E-commerce Solutions *@
-            <div class="col-lg-6 col-sm-6">
-                <div class="single-ml-services-box">
-                    <div class="image">
-                        <img src="~/Assets/img/services-left-image/service-image1.png" alt="image">
-                    </div>
-                    <h3><a href="/service-details/">E-commerce Solutions</a></h3>
-                    <p>Emphasizes the expertise in building robust e-commerce platforms with features like secure payment gateways and inventory management.</p>
-                </div>
+        </div>
+
+        <div class="shape2 rotateme">
+            <img src="../assets/img/shape2.svg" alt="shape" />
+        </div>
+        <div class="shape3">
+            <img src="../assets/img/shape3.svg" alt="shape" />
+        </div>
+        <div class="shape4">
+            <img src="../assets/img/shape4.svg" alt="shape" />
+        </div>
+        <div class="shape5">
+            <img src="../assets/img/shape5.png" alt="shape" />
+        </div>
+        <div class="shape6 rotateme">
+            <img src="../assets/img/shape4.svg" alt="shape" />
+        </div>
+        <div class="shape7">
+            <img src="../assets/img/shape4.svg" alt="shape" />
+        </div>
+        <div class="shape8 rotateme">
+            <img src="../assets/img/shape2.svg" alt="shape" />
+        </div>
+    </div>
+
+    @* Projects Section *@
+    <div class="container pb-80">
+        <div class="justify-content-center text-center">
+            <div class="section-title" style="margin-top: 80px;">
+                <h2>Our Featured Projects</h2>
+                <div class="bar"></div>
             </div>
-            @* Data Analytics *@
-            <div class="col-lg-6 col-sm-6">
-                <div class="single-ml-services-box">
-                    <div class="image">
-                        <img src="~/Assets/img/services-left-image/service-image5.png" alt="image">
+        </div>
+        <div class="container-fluid">
+            <div class="row justify-content-center">
+                @* Project 1 *@
+                <div class="col-lg-3 col-sm-6 col-md-6">
+                    <div class="single-ml-projects-box">
+                        <img src="~/Assets/img/projects-img1.jpg" alt="image">
+                        <div class="plus-icon">
+                            <a href="/project-details/"><span></span></a>
+                        </div>
                     </div>
-                    <h3><a href="/service-details/">Data Analytics</a></h3>
-                    <p>Focuses on helping businesses gain valuable insights from their data for informed decision-making.</p>
                 </div>
-            </div>
-            @* Cybersecurity *@
-            <div class="col-lg-6 col-sm-6">
-                <div class="single-ml-services-box">
-                    <div class="image">
-                        <img src="~/Assets/img/services-left-image/service-image4.png" alt="image">
+                @* Project 2 *@
+                <div class="col-lg-3 col-sm-6 col-md-6">
+                    <div class="single-ml-projects-box">
+                        <img src="~/Assets/img/projects-img2.jpg" alt="image">
+                        <div class="plus-icon">
+                            <a href="/project-details/"><span></span></a>
+                        </div>
                     </div>
-                    <h3><a href="/service-details/">Cybersecurity</a></h3>
-                    <p>Highlights comprehensive cybersecurity solutions to protect businesses from potential threats and safeguard their data.</p>
+                </div>
+                @* Project 3 *@
+                <div class="col-lg-3 col-sm-6 col-md-6">
+                    <div class="single-ml-projects-box">
+                        <img src="~/Assets/img/projects-img3.jpg" alt="image">
+                        <div class="plus-icon">
+                            <a href="/project-details/"><span></span></a>
+                        </div>
+                    </div>
+                </div>
+                @* Project 4 *@
+                <div class="col-lg-3 col-sm-6 col-md-6">
+                    <div class="single-ml-projects-box">
+                        <img src="~/Assets/img/projects-img4.jpg" alt="image">
+                        <div class="plus-icon">
+                            <a href="/project-details/"><span></span></a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-
-    <div class="shape2 rotateme">
-        <img src="../assets/img/shape2.svg" alt="shape" />
-    </div>
-    <div class="shape3">
-        <img src="../assets/img/shape3.svg" alt="shape" />
-    </div>
-    <div class="shape4">
-        <img src="../assets/img/shape4.svg" alt="shape" />
-    </div>
-    <div class="shape5">
-        <img src="../assets/img/shape5.png" alt="shape" />
-    </div>
-    <div class="shape6 rotateme">
-        <img src="../assets/img/shape4.svg" alt="shape" />
-    </div>
-    <div class="shape7">
-        <img src="../assets/img/shape4.svg" alt="shape" />
-    </div>
-    <div class="shape8 rotateme">
-        <img src="../assets/img/shape2.svg" alt="shape" />
-    </div>
-</div>
 
 
     <div class="shape2 rotateme">
