--- a/Views/Home/Ecommerce.cshtml
+++ b/Views/Home/Ecommerce.cshtml
@@ -134,6 +134,50 @@
         </div>
     </div>
 
+    @* Feedback Section *@
+    <div class="feedback-area ptb-80 bg-f7fafd">
+        <div class="container">
+            <div class="owl-carousel agency-portfolio-feedback-slides owl-carousel owl-theme owl-loaded owl-drag">
+                <div class="owl-stage-outer">
+                    <div class="owl-stage" style="transform: translate3d(-1460px, 0px, 0px); transition: all 1s ease 0s; width: 2190px;">
+                        <div class="owl-item" style="width: 730px;">
+                            <div class="agency-portfolio-feedback-item">
+                                <img src="~/Assets/img/client-image/client1.jpg" alt="image">
+                                <p>
+                                    Pellentesque sed purus eu urna vulputate interdum quis sit amet sapien. Pellentesque porta mauris at orci sagittis commodo. Curabitur aliquam nibh odio, vel ornare nisl volutpat quis. Maecenas congue dapibus lacus id fringilla. Vestibulum id augue massa. Proin sed neque dapibus, vulputate ligula eget, aliquam eros.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="owl-item" style="width: 730px;">
+                            <div class="agency-portfolio-feedback-item">
+                                <img src="~/Assets/img/client-image/client2.jpg" alt="image">
+                                <p>
+                                    Pellentesque sed purus eu urna vulputate interdum quis sit amet sapien. Pellentesque porta mauris at orci sagittis commodo. Curabitur aliquam nibh odio, vel ornare nisl volutpat quis. Maecenas congue dapibus lacus id fringilla. Vestibulum id augue massa. Proin sed neque dapibus, vulputate ligula eget, aliquam eros.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="owl-item active" style="width: 730px;">
+                            <div class="agency-portfolio-feedback-item">
+                                <img src="~/Assets/img/client-image/client3.jpg" alt="image">
+                                <p>
+                                    Pellentesque sed purus eu urna vulputate interdum quis sit amet sapien. Pellentesque porta mauris at orci sagittis commodo. Curabitur aliquam nibh odio, vel ornare nisl volutpat quis. Maecenas congue dapibus lacus id fringilla. Vestibulum id augue massa. Proin sed neque dapibus, vulputate ligula eget, aliquam eros.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="owl-nav disabled">
+                    <div class="owl-prev">prev</div>
+                    <div class="owl-next">next</div>
+                </div>
+                <div class="owl-dots">
+                    <div class="owl-dot"><span></span></div>
+                    <div class="owl-dot"><span></span></div>
+                    <div class="owl-dot active"><span></span></div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="shape2 rotateme">
         <img src="../assets/img/shape2.svg" alt="shape" />
