--- a/Views/Home/Ecommerce.cshtml
+++ b/Views/Home/Ecommerce.cshtml
@@ -7,8 +7,8 @@
     <div class="ml-main-banner">
         <div class="container-fluid">
             <div class="section-title" style="margin-top: 100px">
-                <h1 class="font-weight-bold">Welcome to Future Craft Digital Store</h1>
-                <h3>Explore a wide range of cutting-edge IT products and solutions.</h3>
+                <h1 class="font-weight-bold">E-commerce Website Development</h1>
+                <h3>Create an Online Store that Drives Results</h3>
                 <a class="btn btn-secondary mt-5" href="/contact/">Get Started</a>
             </div>
         </div>
@@ -88,7 +88,8 @@
     <div class="container pb-80">
         <div class="justify-content-center text-center">
             <div class="section-title" style="margin-top: 80px;">
-                <h2>Our Featured Projects</h2>
+                <h2>Our Portfolio</h2>
+                <p>Take a look at some of our successfully launched e-commerce websites.</p>
                 <div class="bar"></div>
             </div>
         </div>
