style: added free trial section

--- a/Views/Home/POS.cshtml
+++ b/Views/Home/POS.cshtml
@@ -123,3 +123,23 @@
     </div>
 </div>
 
+@* Free Trial Section *@
+<div class="row align-items-center">
+    <div class="col-lg-6 col-md-12">
+        <div class="free-trial-image">
+            <img src="~/Assets/img/free-trial-img.png" alt="image">
+        </div>
+    </div>
+
+    <div class="col-lg-6 col-md-12">
+        <div class="free-trial-content">
+            <h2>Start your free trial</h2>
+            <form class="newsletter-form">
+                <input type="email" class="input-newsletter" placeholder="Enter your business email here">
+                <button type="submit">Sign Up Free</button>
+            </form>
+            <p>Test out the Machine Learning features for 14 days, no credit card required.</p>
+        </div>
+    </div>
+</div>
+
