--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -65,7 +65,7 @@
                                             </a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="/about-2/">
+                                            <a class="nav-link" href="@Url.Action("Outsourcing", "Home")">
                                                 Outsourcing Solutions
                                             </a>
                                         </li>
